Add npm start/stop

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js $@",
+    "stop": "pkill --signal SIGINT serverhere"
   },
   "repository": {
     "type": "git",
